[gd_scene load_steps=18 format=2]

[ext_resource path="res://UserInterface/PauseMenu/input_menu/InputMenu.gd" type="Script" id=1]
[ext_resource path="res://UserInterface/PauseMenu/input_menu/input_mapper/InputMapper.tscn" type="PackedScene" id=2]
[ext_resource path="res://UserInterface/PauseMenu/input_menu/fonts/montserrat-extra-bold-48px.tres" type="DynamicFont" id=3]
[ext_resource path="res://UserInterface/PauseMenu/input_menu/fonts/montserrat-extra-bold-24px.tres" type="DynamicFont" id=4]
[ext_resource path="res://UserInterface/PauseMenu/input_menu/input_line/ActionList.gd" type="Script" id=5]
[ext_resource path="res://UserInterface/PauseMenu/input_menu/KeySelectMenu.gd" type="Script" id=8]
[ext_resource path="res://UserInterface/Fonts/MangabeyRegular-rgqVO.otf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 9 )

[sub_resource type="GDScript" id=1]
script/source = "#MIT License
#
#Copyright (c) 2017 Nathan Lovato
#
#Permission is hereby granted, free of charge, to any person obtaining a copy
#of this software and associated documentation files (the \"Software\"), to deal
#in the Software without restriction, including without limitation the rights
#to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#copies of the Software, and to permit persons to whom the Software is
#furnished to do so, subject to the following conditions:
#
#The above copyright notice and this permission notice shall be included in all
#copies or substantial portions of the Software.
#
#THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
#SOFTWARE.
extends OptionButton

func initialize(input_mapper):
	for profile_index in input_mapper.profiles:
		var profile_name = input_mapper.profiles[profile_index].get(\"Name\").capitalize()
		add_item(profile_name, profile_index)
	self.connect(\"item_selected\", input_mapper, \"_on_ProfilesMenu_item_selected\")
"

[sub_resource type="DynamicFont" id=4]
size = 33
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 39
extra_spacing_top = 5
extra_spacing_bottom = 2
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.380392, 0.286275, 0.486275, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.55906, 0.418854, 0.714844, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.498039, 0.372549, 0.635294, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.101917, 0.0565338, 0.152344, 1 )

[sub_resource type="Theme" id=5]
Button/fonts/font = SubResource( 6 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 3 )

[node name="InputMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.0901961, 0.239216, 1 )

[node name="InputMapper" parent="." instance=ExtResource( 2 )]

[node name="Column" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/separation = 25

[node name="Title" type="Label" parent="Column"]
margin_right = 1820.0
margin_bottom = 72.0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "Controls Menu"
align = 1
autowrap = true
uppercase = true

[node name="ProfilesMenu" type="OptionButton" parent="Column"]
margin_left = 895.0
margin_top = 97.0
margin_right = 924.0
margin_bottom = 134.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
flat = true
script = SubResource( 1 )

[node name="Header" type="HBoxContainer" parent="Column"]
margin_top = 159.0
margin_right = 1820.0
margin_bottom = 190.0

[node name="Action" type="Label" parent="Column/Header"]
margin_right = 604.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 4 )
text = "Action"
uppercase = true

[node name="Control" type="Label" parent="Column/Header"]
margin_left = 608.0
margin_right = 1212.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 4 )
text = "Control"
align = 1
uppercase = true

[node name="Button" type="Label" parent="Column/Header"]
margin_left = 1734.0
margin_right = 1820.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 733, 854 )
size_flags_horizontal = 10
size_flags_vertical = 1
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 4 )
text = "Change"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="Column"]
margin_top = 215.0
margin_right = 1820.0
margin_bottom = 912.0
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="Column/ScrollContainer"]
margin_right = 1820.0
margin_bottom = 697.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
script = ExtResource( 5 )

[node name="Button" type="Button" parent="Column"]
margin_top = 937.0
margin_right = 1820.0
margin_bottom = 980.0
theme = SubResource( 5 )
text = "Save"

[node name="KeySelectMenu" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.679569 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="KeySelectMenu"]
anchor_left = 0.382
anchor_top = 0.5
anchor_right = 0.566
anchor_bottom = 0.5
margin_left = -356.36
margin_top = -30.0
margin_right = 459.32
margin_bottom = 30.0
size_flags_horizontal = 5
theme = SubResource( 2 )
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "Press a Key..."
align = 1
autowrap = true
uppercase = true

[connection signal="pressed" from="Column/Button" to="." method="save"]
